--- a/static/index.html
+++ b/static/index.html
@@ -8,18 +8,23 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Michael Bernstein</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Jesse Bishop</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Michael Bernstein is an assistant professor of Computer Science at Stanford University and director of the human-computer interaction group. He combines computation with crowds, designing systems that enable people to connect and coordinate online.</p>
+	<p>Jesse is a Computer Engineering students at UC San Diego with a background in the semiconductor industry and is an active member of IEEE organization.</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Waiting in line</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
+		<li>IEEE micromouse</li>
+		<li>16x16 LED dot Matrix Circuit</li>
+		<li>Giesel Library Neon Lamp</li>
+		<li>Java SMS Push Notification program</li>
+		<li>Chat Program utilizing ActiveMQ and Spring Framework</li>
 		<li>...</li>
+
+
+
 	</ol>
 </body>
 </html>
